<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextClock
        android:background="@drawable/select_bg"
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/_12_30"
        android:textColor="@color/white"
        android:textSize="60dp" />

    <TextView
        android:background="@drawable/select_bg"
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clock"
        android:layout_marginTop="-6dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/splace"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cute"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_1"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/world"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_2"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/land"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_3"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_4"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kitty"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_5"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuties"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_6"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moogle"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/select_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_7"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catuba"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>