<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainwallpaper"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/cat_1"
        android:id="@+id/imagefull"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extralayoutfull"
        android:visibility="gone">
        <include layout="@layout/item_test" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_close" />

    <LinearLayout
        android:layout_width="104dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lofull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/full"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/close_fullscreen" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/full"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lotest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/visible"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/visibility" />

            <ImageView
                android:id="@+id/visible_off"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/visibility_off"
                android:visibility="gone" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lolike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/like"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/like_border" />

            <ImageView
                android:id="@+id/likes"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/like"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtlikes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_3545"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lohome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/home_wallpaper" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_ly"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lolock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/lock_wallpaper" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lock_ly"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loboth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/both"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/both_wallpaper" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/both_ly"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loshare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/share"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/baseline_share_24" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_ly"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lodownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/download"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/select_bg"
                android:src="@drawable/download" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/download_ly"
                android:textSize="11dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/progresscard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:cardCornerRadius="20dp">

        <ProgressBar
            android:id="@+id/loding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="in progress.."
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            />

    </androidx.cardview.widget.CardView>
</RelativeLayout>