<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/black">
            </View>
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="-55dp"
                android:background="@drawable/rounded_background">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_back"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thank_you_for_using_this_app"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>
            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:rating="5"
                android:theme="@style/MyRatingBar"
                android:id="@+id/RatingBar"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/back_button"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ExitApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_app"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/back_button"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>